[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/resorte.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Nasta.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Fuego.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites Pixel Art/Gato_Durmiendo_1_Texto.png" type="Texture" id=4]
[ext_resource path="res://Sprites Pixel Art/Gato Enojado_Texto.png" type="Texture" id=5]
[ext_resource path="res://Sound&FX/salto.wav" type="AudioStream" id=6]
[ext_resource path="res://Sound&FX/desvanecer.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 46.3461, 26.1402 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": false,
"name": "Gato",
"speed": 3.0
} ]

[node name="Plataforma" type="StaticBody2D"]

scale = Vector2( 1.04629, 1.04629 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform" ]
salto = 45
saltoExtra = 0
soyMovible = false
tiempoMov = 1
meRompo = false
listPowerUp = [ ExtResource( 2 ), ExtResource( 2 ) ]
puedoTenerPowerUp = true
distanciaDeBorrado = 600

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )
one_way_collision = true

[node name="AnimatedSprite2" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( -53.3869, 33.9823 )
frame = 1
flip_h = true

[node name="AnimatedSprite3" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 53.1411, 32.5869 )
frame = 1
flip_h = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="3"]

position = Vector2( -0.405518, -19.2365 )
scale = Vector2( 0.22, 0.22 )
frames = SubResource( 2 )
animation = "Gato"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Audio" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Audio2" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 7 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1


